patches/fp1
Bottom: dc1de173ad587d609d485bb02b403ea81dec7c00
Top:    dc1de173ad587d609d485bb02b403ea81dec7c00
Author: scott snyder <sss@karma>
Date:   2021-04-08 11:17:14 -0400

danglingTempReference false positive

hi -

This example gives a false positive with cppcheck 2.4.1:


```
struct Elt
{
  void foo();
};
template <class T>
struct Subset
{
  typedef Elt& Reference;
};
struct Cont
{
  Subset<T>::Reference get();
};


void f (Cont* c)
{
  Elt& e = c->get();
  e.foo();
}

```

```

$ cppcheck x.cc
Checking x.cc ...
x.cc:19:3: error: Using reference to dangling temporary. [danglingTempReference]
  e.foo();
  ^
x.cc:18:10: note: Assigned to reference.
  Elt& e = c->get();
         ^
x.cc:19:3: note: Using reference to dangling temporary.
  e.foo();
  ^
```


---


